odoo/odoo_Deployment_odoo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: odoo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: odoo
    app.kubernetes.io/version: 17.0.20240305
    helm.sh/chart: odoo-26.0.0
  name: odoo
  namespace: odoo
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: odoo
      app.kubernetes.io/name: odoo
  strategy:
    rollingUpdate: null
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: odoo
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: odoo
        app.kubernetes.io/version: 17.0.20240305
        helm.sh/chart: odoo-26.0.0
    spec:
      affinity:
        nodeAffinity: null
        podAffinity: null
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  app.kubernetes.io/instance: odoo
                  app.kubernetes.io/name: odoo
              topologyKey: kubernetes.io/hostname
            weight: 1
      automountServiceAccountToken: false
      containers:
      - env:
        - name: BITNAMI_DEBUG
          value: 'false'
        - name: ALLOW_EMPTY_PASSWORD
          value: 'no'
        - name: ODOO_DATABASE_HOST
          value: ocf-odoo-db
        - name: ODOO_DATABASE_PORT_NUMBER
          value: '5432'
        - name: ODOO_DATABASE_NAME
          value: odoo
        - name: ODOO_DATABASE_FILTER
          value: .*
        - name: ODOO_DATABASE_USER
          value: odoo
        - name: ODOO_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: odoo.ocf-odoo-db.credentials.postgresql.acid.zalan.do
        - name: ODOO_EMAIL
          value: user@example.com
        - name: ODOO_PASSWORD
          valueFrom:
            secretKeyRef:
              key: odoo-password
              name: odoo
        - name: ODOO_SKIP_BOOTSTRAP
          value: 'no'
        - name: ODOO_LOAD_DEMO_DATA
          value: 'no'
        envFrom: null
        image: docker.io/bitnami/odoo:17.0.20240305-debian-12-r0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 6
          httpGet:
            path: /web/health
            port: http
          initialDelaySeconds: 600
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 5
        name: odoo
        ports:
        - containerPort: 8069
          name: http
        readinessProbe:
          failureThreshold: 12
          httpGet:
            path: /web/health
            port: http
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          limits:
            cpu: '1.5'
            ephemeral-storage: 1024Mi
            memory: 3072Mi
          requests:
            cpu: '1.0'
            ephemeral-storage: 50Mi
            memory: 2048Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - CHOWN
            - FOWNER
            - SYS_CHROOT
            - SETGID
            - SETUID
            - DAC_OVERRIDE
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsGroup: 0
          runAsNonRoot: false
          runAsUser: 0
          seLinuxOptions: {}
          seccompProfile:
            type: RuntimeDefault
        volumeMounts:
        - mountPath: /bitnami/odoo
          name: odoo-data
      securityContext:
        fsGroup: 0
        fsGroupChangePolicy: Always
        supplementalGroups: []
        sysctls: []
      serviceAccountName: odoo
      volumes:
      - name: odoo-data
        persistentVolumeClaim:
          claimName: odoo
