odoo/odoo_Service_odoo.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: odoo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: odoo
    app.kubernetes.io/version: 17.0.20240305
    helm.sh/chart: odoo-26.0.0
  name: odoo
  namespace: odoo
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/instance: odoo
    app.kubernetes.io/name: odoo
  sessionAffinity: None
  type: LoadBalancer
