odoo/odoo_Ingress_odoo.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
  labels:
    app.kubernetes.io/instance: odoo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: odoo
    app.kubernetes.io/version: 17.0.20240305
    helm.sh/chart: odoo-26.0.0
  name: odoo
  namespace: odoo
spec:
  ingressClassName: contour
  rules:
  - host: odoo.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: odoo
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - odoo.ocf.berkeley.edu
    secretName: odoo.ocf.berkeley.edu-tls
