odoo/odoo_NetworkPolicy_odoo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: odoo
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: odoo
    app.kubernetes.io/version: 17.0.20240305
    helm.sh/chart: odoo-26.0.0
  name: odoo
  namespace: odoo
spec:
  egress:
  - {}
  ingress:
  - ports:
    - port: 8069
    - port: null
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: odoo
      app.kubernetes.io/name: odoo
  policyTypes:
  - Ingress
  - Egress
